--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
                                 <a href="#" class="lienactivites">
                                     <figure class="figureactivites">
-                                        <img src="images/activités/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port">
+                                        <img src="images/activite/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port">
                                         <figcaption class="figcaptionactivités">
                                             <p class="nomactivités">Vieux port</p>
                                         </figcaption>
@@ -219,7 +219,7 @@
 
                                 <a href="#" class="lienactivites">
                                     <figure class="Pomeguesactivites">
-                                        <img src="images/activités/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
+                                        <img src="images/activite/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
                                         <figcaption class="figcaptionactivités">
                                             <p class="nomactivités">Fort de Pomègues</p>
                                         </figcaption>
@@ -228,7 +228,7 @@
 
                                 <a href="#" class="lienactivites">
                                     <figure class="standardactivites">
-                                        <img src="images/activités/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="îles de Frioul">
+                                        <img src="images/activite/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="îles de Frioul">
                                         <figcaption class="figcaptionactivités">
                                             <p class="nomactivités">îles de Frioul</p>
                                         </figcaption>
@@ -238,7 +238,7 @@
 
                                 <a href="#" class="lienactivites">
                                     <figure class="figureactivites">
-                                        <img src="images/activités/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques">
+                                        <img src="images/activite/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques">
                                         <figcaption class="figcaptionactivités">
                                             <p class="nomactivités">Parc National des Calanques</p>
                                         </figcaption>
@@ -249,7 +249,7 @@
 
                                 <a href="#" class="lienactivites">
                                     <figure class="standardactivites">
-                                        <img src="images/activités/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
+                                        <img src="images/activite/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
                                         <figcaption class="figcaptionactivités">
                                             <p class="nomactivités">Notre-Dame-de-la-Garde</p>
                                         </figcaption>
@@ -258,7 +258,7 @@
 
                                 <a href="#" class="lienactivites">
                                     <figure class="standardactivites">
-                                        <img src="images/activités/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
+                                        <img src="images/activite/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
                                         <figcaption class="figcaptionactivités">
                                             <p class="nomactivités">Parc Longchamps</p>
                                         </figcaption>
