--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <figure class="hebergement Canebiere">
                                 <img src="images/Hebergements/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Canebière">
                                 <figcaption class="legendehebergement">
-                                    <p class="nomhebergement">Auberge de la Canebiere</p>
+                                    <p class="nomhebergement">Auberge de la Canebière</p>
                                     <p class="prixhebergement">Nuit à partir de 25€</p>
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -167,10 +167,10 @@
                         </a>
 
                         <a href="#">
-                            <figure class="populaire Au ceur de l'eau Chambres d'hôtes">
+                            <figure class="populaire Au coeur de l'eau Chambres d'hôtes">
                                 <img src="images/Hebergements/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au ceur de l'eau Chambres d'hôtes">
                                     <figcaption class="legendehebergement">
-                                        <p class="nomhebergement">Au ceur de l'eau Chambres d'hôtes</p>
+                                        <p class="nomhebergement">Au coeur de l'eau Chambres d'hôtes</p>
                                         <p class="prixhebergement">Nuit à partir de 71€</p>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
